--- a/_posts/2023-10-05-ai-robot.markdown
+++ b/_posts/2023-10-05-ai-robot.markdown
@@ -1,6 +1,6 @@
 ---
 layout: pseudo
-title:  "AI-Power Robots"
+title:  "AI-Powered Robots"
 date:   2023-10-05 00:00:00 +0800
 categories: intro
 description: 
